# learning-engine

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  Taskfile.yml  compose.dev.yaml  compose.prod.yaml  compose.yaml  pyproject.toml  render.yaml  server.py  skills-lock.json
.codex/: config.toml  setup.sh
.codex/skills/ship-ticket/: SKILL.md
.codex/skills/ship-ticket/agents/: openai.yaml
.codex/skills/small-ticket/: SKILL.md
.codex/skills/small-ticket/agents/: openai.yaml
.codex/skills/spec-ticket/: SKILL.md
.codex/skills/spec-ticket/agents/: openai.yaml
.codex/skills/ui-ux-foundations-review/: SKILL.md
.codex/skills/ui-ux-foundations-review/agents/: openai.yaml
.contextive/: definitions.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-20T14-50-58Z__ges-learning-engine-signalgardenpage-tsx-interests.md
.impeccable/live/: config.json
backend/: .dockerignore  AGENTS.md  Dockerfile  Taskfile.yml  pyproject.toml  server.py  vulture_whitelist.py
backend/data/: interests.json
backend/learning_engine/: __init__.py  app.py  collector.py  config.py  dates.py  fetching.py  models.py  source_images.py  storage.py
backend/learning_engine/application/: auth.py  collect_updates.py  collections.py  mcp_interest_commands.py  ports.py  resolve_source_image.py  responses.py
backend/learning_engine/common/: __init__.py  dates.py  text.py
backend/learning_engine/common/timeframe/: __init__.py
backend/learning_engine/domain/: __init__.py  collections.py  interests.py  source_types.py  updates.py
backend/learning_engine/infrastructure/: __init__.py  fetching.py  storage.py
backend/learning_engine/infrastructure/source_collectors/: __init__.py  feed.py  image_metadata.py  page.py  registry.py  spotify.py  twitter.py  youtube.py
backend/learning_engine/infrastructure/source_images/: __init__.py  resolver.py
backend/learning_engine/presentation/: __init__.py  app.py  auth.py  collections_router.py  fastapi_app.py  interests_router.py  mcp_interest_server.py  schemas.py  state.py
backend/learning_engine/sources/: __init__.py  feed.py  page.py  spotify.py  twitter.py  youtube.py
backend/learning_engine/timeframe/: __init__.py
backend/scripts/: check_unused_functions.py  generate_briefing.py  migrate_interests_json_to_postgres.py
backend/tests/: test_app.py  test_collector.py  test_server.py  test_source_images.py  test_timeframe.py
backend/tests/application/: test_collect_updates.py  test_collection_behavior.py  test_collections.py  test_mcp_interest_commands.py
backend/tests/architecture/: test_boundaries.py
backend/tests/common/: __init__.py  test_config.py  test_render_blueprint.py  test_timeframe.py
backend/tests/domain/: test_models.py
backend/tests/infrastructure/: test_fetching.py  test_migration_script.py  test_storage.py
backend/tests/infrastructure/source_collectors/: __init__.py  test_feed.py  test_identifiers.py
backend/tests/infrastructure/source_images/: __init__.py  test_resolver.py
backend/tests/presentation/: __init__.py  test_auth.py  test_fastapi_app.py  test_schemas.py
briefings/: briefing-2026-05-15-last-14-days.json
data/: interests.json
docs/: codex-mcp.md  coding_guidelines.md  deployment.md
docs/brand/: signal-garden-design-system.md
docs/deployment/: render.md
learning_engine/: app.py  collector.py  config.py  fetching.py  models.py
openspec/: AGENTS.md
openspec/changes/add-clerk-user-accounts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-08-add-source-image-resolver/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-08-free-room-for-updates/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-08-local-timezone-update-datetimes/: design.md  proposal.md  tasks.md
openspec/changes/show-source-image-in-updates/: tasks.md
openspec/specs/authentication-user-accounts/: spec.md
openspec/specs/collections/: spec.md
openspec/specs/interest-import-export/: spec.md
openspec/specs/interests/: spec.md
openspec/specs/mcp/: spec.md
openspec/specs/mcp-interest-management/: spec.md
openspec/specs/pwa-installability/: spec.md
openspec/specs/source-image-resolution/: spec.md
openspec/specs/source-metadata/: spec.md
openspec/specs/update-collections/: spec.md
openspec/specs/update-datetime-display/: spec.md
openspec/specs/updates/: spec.md
openspec/specs/updates-page-layout/: spec.md
openspec/specs/webapp-shell/: spec.md
public/: app.js  briefing-2026-05-15-last-14-days.html  index.html  styles.css
scripts/: generate_briefing.py
tests/: test_app.py  test_server.py
webapp/: .fallowrc.json  AGENTS.md  Dockerfile  Taskfile.yml  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
webapp/public/: site.webmanifest
webapp/src/: App.tsx  config.ts  main.tsx  pwa.ts  styles.css  useOnlineStatus.ts  usePwaUpdate.ts
webapp/src/components/: StatCard.tsx  Toast.tsx
(+99 files in other folders)
