[project]
name = "learning-engine-starter"
version = "0.1.0"
description = "Local-first personal learning engine backend."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pip>=26.1.1",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "uv>=0.11.14",
]

[project.scripts]
learning-engine = "learning_engine.app:run"

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_briefing.py" = ["E501", "RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
files = ["learning_engine", "server.py"]

[[tool.mypy.overrides]]
module = ["uvicorn"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
